preventing overflow for app names

--- a/public/style/apps/apps.less
+++ b/public/style/apps/apps.less
@@ -20,6 +20,9 @@
 				.title {
 					font-size: 1.2em;
 					// font-weight: bold;
+					max-width: 25em;
+					overflow: hidden;
+					text-overflow: ellipsis;
 				}
 				.provider-logos {
 					img {
